--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-    "name": "Hello Extensions",
-    "description" : "Base Level Extension",
-    "version": "1.0",
-    "manifest_version": 2,
-    "browser_action": {
-     "default_popup": "hello.html",
-     "default_icon": "hello_extensions.png"
-   },
-   "commands": {
-      "_execute_browser_action": {
-        "suggested_key": {
-          "default": "Ctrl+Shift+F",
-          "mac": "MacCtrl+Shift+F"
-        },
-        "description": "Opens hello.html"
-      }
-    }
+  "name": "hello",
+  "version": "1",
+  "browser_action":
+  {
+    "default_icon": "hello_extensions.png"
+  },
+  "background":
+  {
+    "scripts": ["background.js"]
+  },
+  "permissions": ["tabs"],
+  "manifest_version": 2
 }
